@@ -1,18 +1,11 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST rails_best_practices-0.10.0.gem 50176 RMD160 9c6b9ac049fea9e3e7ca8034f99d71ec0b003f3f SHA1 606d114327423787a8d8274816c120ce1994c4d5 SHA256 b2f328aa51d645b9d15b430ed773b8d87bafca3e67e948f05a70a005f212e749
 DIST rails_best_practices-0.10.1.gem 50176 RMD160 6efb6e50782fc26c48fd46aa09708042163e5f6c SHA1 f82b9d9e823afb6862c2835296188b2095b64850 SHA256 1401368812f95d1ee6f4f7edf901048fec6216dd44df979105a17c3e58fa02c7
-DIST rails_best_practices-0.9.0.gem 49664 RMD160 141173c00b9e1b50a7cd383cc8b9c5e4f691dfdb SHA1 b54fe05bdb77307a6a51a818ce0e2287c76e4a7e SHA256 37d1c19d13ed1c917316be85c70435bd9b3f1c7e0fb9d510ff61ec6bea17df26
-EBUILD rails_best_practices-0.10.0.ebuild 781 RMD160 fbbd5bae9c48606fe52fa1f847fc16833a756856 SHA1 b001bf61b26cd7b938be7470cc35e0a8cdc53c5d SHA256 2d6fbfdc21bf04801acf2dfae5a3cdad9c1db210863231bbd51b6e9cfb055883
-EBUILD rails_best_practices-0.10.1.ebuild 781 RMD160 fbbd5bae9c48606fe52fa1f847fc16833a756856 SHA1 b001bf61b26cd7b938be7470cc35e0a8cdc53c5d SHA256 2d6fbfdc21bf04801acf2dfae5a3cdad9c1db210863231bbd51b6e9cfb055883
-EBUILD rails_best_practices-0.9.0.ebuild 881 RMD160 c70437e00146aaf2c080543174b5c7637bed1c52 SHA1 03544591fee210a66308de80cbced193e563f360 SHA256 6782302778f7ef903a8234672c111400fc6a421bfe5dcdcfbc2d091d59178a5c
-MISC ChangeLog 1928 RMD160 888344fd506d8a9f6ec813efb9cec3d7eba4b97f SHA1 56c4307db67295f8767949cca31fa209bf304a3f SHA256 671146626ed9c9e6f80c57fcf8a6d7b8df93c8bad4ac170698252004507ee466
-MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk474g8ACgkQiIP6VqMIqNdpnQD/W5w9k6PPWngv9y9zpeimnVOp
-XCQASMby54DgSwQ1gWMBAIho62mcRoi7TGc7WwjfYKTmLIC29LOSnmzgvyoAMlS8
-=7106
+iF4EAREIAAYFAk+0wIMACgkQiIP6VqMIqNcSQgEAlJimodgWjadKXyIJovfQ7vkK
+wjQJt3HJqaZvOzt+L3gBAJGGQTMfUiedOZapuKaUleXYFeOjtU4FdyDO6snKn1Gw
+=e8WO
 -----END PGP SIGNATURE-----
