@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/rails_best_practices
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  17 May 2012; Hans de Graaff <graaff@gentoo.org>
+  -rails_best_practices-0.9.0.ebuild, -rails_best_practices-0.10.0.ebuild:
+  Remove old versions.
 
 *rails_best_practices-0.10.1 (05 Aug 2011)
 
